monikor (1.3.0) quanta; urgency=low

  * Fixed time comparison in metric store
  * Removed varnishlib-based varnish module
  * libmonikor: Changed monikor_metric_list_apply to accept a data argument
  * limonikor: added monikor_metric_string_id to create a string metric with an id

monikor (1.2.3) quanta; urgency=low

  * Fix crash in Nginx module when status endpoint returns an empty response

monikor (1.2.2) quanta; urgency=low

  * Fix compiler warnings / potential minor bugs
  * Add support for Varnish 6

-- Matthieu ROSINSKI <support@quanta.io> Wed, 15 Apr 2020 17:20:42 +2000

monikor (1.2.1) quanta; urgency=low

  * Add Redis auth support

-- Matthieu ROSINSKI <support@quanta.io> Wed, 10 Apr 2019 17:20:42 +2000

monikor (1.2.0) quanta; urgency=low

  * Add PostgreSQL module
  * Add Varnish4 support with a lot of metrics
  * Add NFSv3 module
  * Add more system metrics (context switches, interrupts, etc)
  * Add inodes filesystem metrics
  * Add swap operations metrics
  * Add Memcached max cache size metric
  * Add Redis objects count metric
  * Add MySQL slow queries metric
  * Add TCP network metrics
  * Allow the user to select the network interfaces to monitor in network.yml
  * Add a builtin "sysinfo" module to get OS/kernel informations as well as
    cloud provider
  * Add support for "tags" in agent.yml, they are sent as string metrics
  * If the agent is running on GCP or AWS and no hostid is provided, it will
    try to use the instance id
  * Better logging and debug messages

 -- Matthieu ROSINSKI <support@quanta.io>  Wed, 27 Sep 2017 16:48:42 +2000

monikor (1.1.0) quanta; urgency=low

  * Allow the parameter "module" in modules configuration file to specify the module to use
  * Handles the parameter "instance" in Redis, Memcached and Varnish modules
  * Varnish module now handles the n arg (it's instance parameter)
  * Bumping to 1.1.0

 -- Matthieu ROSINSKI <support@quanta.io>  Sun, 12 June 2016 18:05:23 +0000
