@@ -3,7 +3,8 @@ monikor (1.3.0) quanta; urgency=low
   * Fixed time comparison in metric store
   * Removed varnishlib-based varnish module
   * libmonikor: Changed monikor_metric_list_apply to accept a data argument
-  * limonikor: added monikor_metric_string_id to create a string metric with an id
+  * libmonikor: added monikor_metric_string_id to create a string metric with an id
+  * libmonikor: monikor_metric_clone now also clones the metric value
 
 monikor (1.2.3) quanta; urgency=low
 
